--- a/app/views/coaches/index.html.erb
+++ b/app/views/coaches/index.html.erb
@@ -3,6 +3,15 @@
 <table>
   <thead>
     <tr>
+      <th>Name</th>
+      <th>email</th>
+      <th>business</th>
+      <th>street</th>
+      <th>city</th>
+      <th>state</th>
+      <th>zip</th>
+      <th>phone_number</th>
+      <th>shirt size</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -10,6 +19,15 @@
   <tbody>
     <% @coaches.each do |coach| %>
       <tr>
+        <td><%= coach.name %></td>
+        <td><%= coach.user.email %></td>
+        <td><%= coach.business %></td>
+        <td><%= coach.street %></td>
+        <td><%= coach.city %></td>
+        <td><%= coach.state %></td>
+        <td><%= coach.zip %></td>
+        <td><%= coach.phone_number %></td>
+        <td><%= coach.shirt_size %></td>
         <td><%= link_to 'Show', coach %></td>
         <td><%= link_to 'Edit', edit_coach_path(coach) %></td>
         <td><%= link_to 'Destroy', coach, method: :delete, data: { confirm: 'Are you sure?' } %></td>
