--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,13 @@
   <ul class="hmenu">
     <%= render 'devise/menu/registration_items' %>
     <%= render 'devise/menu/login_items' %>
+    <%= link_to 'View all profiles', profiles_path if can? :read, Profile %>
+    <%= link_to 'View all coaches', coaches_path if can? :read, Coach %>
     <% if user_signed_in? %>
-      <% if current_user.admin? %>
-        <%= link_to 'View all profiles', profiles_path %>
-        <%= link_to 'View all coaches', coaches_path %>
-      <% else %>
-        <%= link_to 'Edit Profile', (current_user.profile.nil? or current_user.profile.new_record?) ? new_profile_path : edit_profile_path() %>
-        <%= link_to 'become a coach', new_coach_path if current_user.coach.nil? %>
-        <%= link_to 'edit', edit_coach_path(current_user.coach) if current_user.coach %>
-      <% end %>
+      <%= link_to 'Create Profile', new_profile_path() unless current_user.profile %>
+      <%= link_to 'Edit Profile', edit_profile_path(current_user.profile) if current_user.profile and !current_user.profile.new_record? %>
+      <%= link_to 'become a coach', new_coach_path unless current_user.coach %>
+      <%= link_to 'edit coach', edit_coach_path(current_user.coach) if current_user.coach and !current_user.coach.new_record? %>
     <% end %>
   </ul>
   <p class="notice"><%= notice %></p>
