done for the night

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,12 +14,7 @@
  *= require_self
  */
 
- ul.hmenu {
-   list-style: none;
-   margin: 0 0 2em;
-   padding: 0;
- }
-
- ul.hmenu li {
-   display: inline;
- }
+@import 'bootstrap-theme.min';
+@import 'bootstrap.min';
+@import 'style';
+@import 'navigation';
