--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,34 @@
-<%= render 'navigation/navigation' %>
+<div class="container-fluid no-pad landing"></div>	
+<div class="container information">
+	<%= link_to("", root_path, :class => 'logo') %>
+	<ul class="register">
+		<%= render 'devise/menu/registration_items' %>
+	</ul>
+	<div class="more">
+		<a data-toggle="modal" data-target="#myModal">
+		  Learn more about MYPROTOCOL
+		</a>
+	</div>
+	<!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+
