--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  
+  <%= render 'navigation/navigation' %>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
