--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -8,15 +8,16 @@
 		color: rgba(155,155,155,.5);
 		padding: 10px 50px;
 		a{
-			color: rgba(155,155,155, .5);
+			color: rgba(155,155,155, .95);
 			font-size: 16px;
+			font-weight: bold;
 			-webkit-transition: .2s;
 			-moz-transition: .2s;
 			-ms-transition: .2s;
 			-o-transition: .2s;
 			&:hover{
 				text-decoration: none;
-				color: white
+				color: #a90329;
 			}
 		}
 	}
