--- a/app/views/navigation/_navigation.html.erb
+++ b/app/views/navigation/_navigation.html.erb
@@ -1,14 +1,11 @@
 <ul class="hmenu">
   <%= render 'devise/menu/login_items' %>
-<!-- 
-  <%= link_to 'View all profiles', profiles_path if can? :read, Profile %>
-  <%= link_to 'View all coaches', coaches_path if can? :read, Coach %>
-   -->
+  <%= link_to '<li>View all Profiles</li>'.html_safe, profiles_path if can? :read, Profile %>
+  <%= link_to '<li>View all Coaches</li>'.html_safe, coaches_path if can? :read, Coach %>
+   <% if user_signed_in? %>
+     <%= link_to '<li>Create Profile</li>'.html_safe, new_profile_path() unless current_user.profile %>
+     <%= link_to '<li>Edit Profile</li>'.html_safe, edit_profile_path(current_user.profile) if current_user.profile and !current_user.profile.new_record? %>
+     <%= link_to '<li>Become a Coach</li>'.html_safe, new_coach_path unless current_user.coach %>
+     <%= link_to '<li>Edit Coach</li>'.html_safe, edit_coach_path(current_user.coach) if current_user.coach and !current_user.coach.new_record? %>
+   <% end %>
 </ul>
-
-<% if user_signed_in? %>
-    <%= link_to 'Create Profile', new_profile_path() unless current_user.profile %>
-    <%= link_to 'Edit Profile', edit_profile_path(current_user.profile) if current_user.profile and !current_user.profile.new_record? %>
-    <%= link_to 'become a coach', new_coach_path unless current_user.coach %>
-    <%= link_to 'edit coach', edit_coach_path(current_user.coach) if current_user.coach and !current_user.coach.new_record? %>
-<% end %>
