--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -7,18 +7,18 @@
 		<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 		  <%= devise_error_messages! %>
 
-		  <div><%= f.label :email %>
+		  <div class="form-area"><%= f.label :email %>
 		  <%= f.email_field :email, autofocus: true %></div>
 
-		  <div><%= f.label :password %> <% if @validatable %><i></i><% end %>
+		  <div class="form-area"><%= f.label :password %> <% if @validatable %><i></i><% end %>
 		    <%= f.password_field :password, autocomplete: "off" %></div>
 
-		  <div><%= f.label :password_confirmation %>
+		  <div class="form-area"><%= f.label :password_confirmation %>
 		    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
-		  <div><%= f.submit "Sign up" %></div>
+		  <div class="form-area"><%= f.submit "Sign up" %></div>
 		<% end %>
 
-		<%= render "devise/shared/links" %>
+		<div class="login">Already have an account: <%= render "devise/shared/links" %></div>
 	</div>
 </div>
