--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -41,3 +41,18 @@
 	-o-transform: translate(0, -500px) !important;
 	transform: translate(0, -500px) !important;
 }
+
+.alert{
+	position: absolute;
+	z-index: 2;
+	border: none !important;
+	border-radius: 0 !important;
+	top: 100px;
+	width: 100%;
+	text-align: center;
+	text-shadow: none;
+	box-shadow: none;
+	color: rgba(255, 0, 0, 0.4);
+	font-weight: bold;
+	font-size: 15;
+}
