--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,18 @@
 <div class="container-fluid no-pad landing"></div>	
 <div class="container information">
 	<%= link_to("", root_path, :class => 'logo') %>
-	<h2>Forgot your password?</h2>
+	<div class="col-md-6 col-md-offset-3 form">
+		<h2>Forgot your password?</h2>
 
-	<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-	  <%= devise_error_messages! %>
+		<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+		  <%= devise_error_messages! %>
 
-	  <div><%= f.label :email %><br />
-	  <%= f.email_field :email, autofocus: true %></div>
+		  <div class="form-area"><%= f.label :email %>
+		  <%= f.email_field :email, autofocus: true %></div>
 
-	  <div><%= f.submit "Send me reset password instructions" %></div>
-	<% end %>
+		  <div class="form-area"><%= f.submit "Send me reset password instructions" %></div>
+		<% end %>
 
-	<%= render "devise/shared/links" %>
+		<div class="login"><%= render "devise/shared/links" %></div>
+	</div>
 </div>
