--- a/app/views/coaches/edit.html.erb
+++ b/app/views/coaches/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing coach</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @coach %> |
-<%= link_to 'Back', coaches_path %>
+<div class="row">
+  <div class="col-md-offset-2 col-md-8">
+    <h1>Editing Coach</h1>
+    <%= render 'form' %>
+  </div>
+</div>
