--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@profile) do |f| %>
+<%= form_for(@profile, html: { class: 'form-horizontal' }) do |f| %>
   <% if @profile.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@profile.errors.count, "error") %> prohibited this profile from being saved:</h2>
@@ -11,57 +11,77 @@
     </div>
   <% end %>
 
-  <div class="zipcode">
-    <%= f.label :zipcode %>
-    <%= f.text_field :zipcode %>
+  <div class="form-group">
+    <%= f.label :zipcode, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_field :zipcode, class: 'form-control' %>
+    </div>
   </div>
 
-  <div class="gender">
-    <%= f.label :gender %>
-    <%= f.select(:gender, Profile::GENDERS) %>
+  <div class="form-group">
+    <%= f.label :gender, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.select :gender, Profile::GENDERS, {}, class: 'form-control' %>
+    </div>
   </div>
 
-  <div class="body-type">
-    <%= f.label :body_type %>
-    <%= f.select(:body_type, Profile::BODY_TYPES) %>
+  <div class="form-group">
+    <%= f.label :body_type, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.select :body_type, Profile::BODY_TYPES, {}, class: 'form-control' %>
+    </div>
   </div>
 
-  <div class="activity-level">
-    <%= f.label :activity_level %>
-    <%= f.select(:activity_level, Profile::ACTIVITY_LEVELS) %>
+  <div class="form-group">
+    <%= f.label :activity_level, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.select :activity_level, Profile::ACTIVITY_LEVELS, {}, class: 'form-control' %>
+    </div>
   </div>
 
-  <div class="blood-type">
-    <%= f.label :blood_type %>
-    <%= f.select(:blood_type, Profile::BLOOD_TYPES) %>
+  <div class="form-group">
+    <%= f.label :blood_type, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.select :blood_type, Profile::BLOOD_TYPES, {}, class: 'form-control' %>
+    </div>
   </div>
 
-  <div class="height">
-    <%= f.label :height %>
-    <%= f.text_field :height %>
+  <div class="form-group">
+    <%= f.label :height, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_field :height, class: 'form-control' %>
+    </div>
   </div>
 
-  <div class="weight">
-    <%= f.label :weight %>
-    <%= f.text_field :weight %>
+  <div class="form-group">
+    <%= f.label :weight, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_field :weight, class: 'form-control' %>
+    </div>
   </div>
 
-  <div class="waist">
-    <%= f.label :waist %>
-    <%= f.text_field :waist %>
+  <div class="form-group">
+    <%= f.label :waist, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_field :waist, class: 'form-control' %>
+    </div>
   </div>
 
-  <div class="birthday">
-    <%= f.label :birthday %>
-    <%= f.date_select(:birthday, start_year: 1940, end_year: 2014) %>
+  <div class="form-group">
+    <%= f.label :birthday, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.date_select(:birthday, start_year: 1940, end_year: 2014) %>
+    </div>
   </div>
 
-  <div class="veggies_per_day">
-    <%= f.label :veggies_per_day, 'How many vegetables do you eat per day' %>
-    <%= f.select(:veggies_per_day, Profile::VEGGIE_OPTIONS) %>
+  <div class="form-group">
+    <%= f.label :veggies_per_day, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.select :veggies_per_day, Profile::VEGGIE_OPTIONS, {}, class: 'form-control' %>
+    </div>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
