--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New profile</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', profiles_path %>
+<div class="row">
+  <div class="col-md-offset-2 col-md-8">
+    <h1>New Profile</h1>
+    <%= render 'form' %>
+  </div>
+</div>
