--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -6,11 +6,19 @@ body{
 	.no-pad{
 		padding: 0;
 	}
+	a{
+		color: #a90329;
+		font-weight: bold;
+	}
+	.signed_in{
+		display: none;
+	}
 	.landing{
 		position: absolute;
 		width: 100%;
 		height: 100%;
 		top: 0;
+		left: 0;
 		display: inline-block;
 		background: image-url('bg.png') 50% 50% no-repeat;
 		background-size: 100%;
@@ -33,7 +41,7 @@ body{
 			display: block;
 			background: url(/assets/logo.png) 50% 50% no-repeat;
 			background-size: 100%;
-			margin: 100px auto 0 auto;
+			margin: 200px auto 0 auto;
 		}
 		.register{
 			display: inline-block;
@@ -196,4 +204,5 @@ body{
 			}
 		}
 	}
+	
 }
