--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,6 +1,10 @@
-<div class="row">
-  <div class="col-md-offset-2 col-md-8">
-    <h1>New Profile</h1>
-    <%= render 'form' %>
-  </div>
+<div class="container-fluid no-pad landing"></div>	
+<div class="welcome"></div>
+<div class="intro col-md-10 col-md-offset-1">Welcome to the MyProtocol by Protocol Nutrition. Please take a moment to set up your MyProtocol Profile below. This information will help us determine the best customized plan for you. To view all of Protocol Nutrition's products please visit <a href="http://protocolnutrition.com/">www.protocolnutrition.com</a>. <strong>Stick to Protocol!</strong></div>	
+<div class="new-profile container">
+	<div class="row">
+	  <div class="col-md-8 col-md-offset-2 form">
+	    <%= render 'form' %>
+	  </div>
+	</div>
 </div>
