--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -58,6 +58,7 @@
 		display: block;
 		vertical-align: middle;
 		margin-top: 29%;
+		margin-bottom: 20%;
 		font-size: 16px;
 		a{
 			color: #a90329;
