--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="form-area">
     <%= f.label :activity_level %>
-      <%= f.select :activity_level, Profile::ACTIVITY_LEVELS, {} %>
+      <%= f.select :activity_level, Profile::ACTIVITY_LEVELS, {}, class: 'form-control' %>
   </div>
 
   <div class="form-area">
