--- a/app/views/home/_user_dashboard.html.erb
+++ b/app/views/home/_user_dashboard.html.erb
@@ -34,6 +34,29 @@
   <ul class="register">
     <%= render 'devise/menu/registration_items' %>
   </ul>
+  <% if (user_signed_in? and !current_user.profile.nil? and !current_user.profile.new_record?) %>
+    <div class="row">
+      <div class="col-md-8 col-md-offset2">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Report</h3>
+          </div>
+          <div class="panel-body">
+            <h5>Estimated BMI:</h5> <%= current_user.profile.bmi.round 2 %>
+            <h5>Estimated LBM:</h5> <%= current_user.profile.lbm.round 2 %>
+
+            <h5>Recommendations</h5>
+            <ul>
+              <li>Protein: <%= current_user.profile.protein %></li>
+              <li>BCAA: <%= current_user.profile.bcaa %></li>
+              <li>Creatine: <%= current_user.profile.creatine %></li>
+              <li>Fish Oil: <%= current_user.profile.fish_oil %></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
   <div class="row">
     <div class="col-md-6">
       <h2>Nearest Coaches</h2>
