--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -23,20 +23,41 @@ body{
 		top: 0;
 		left: 0;
 		display: inline-block;
-		background: image-url('bg.png') 50% 50% no-repeat;
+		background: image-url('bg.png') 50% 50% no-repeat fixed;
 		background-size: 100%;
 		opacity: .65;
-		z-index: 1;
+		z-index: 0;
+	}
+	.landing_two{
+		opacity: 0;
+	}
+	.users_in{
+		.landing_two{
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			min-height: 1000px;
+			top: 50px;
+			left: 0;
+			display: inline-block;
+			background: image-url('bg_2.png') 50% 50% no-repeat;
+			background-size: 100%;
+			opacity: .65;
+			z-index: 1;
+		}
+		.landing{
+			opacity: 0;
+		}
 	}
 	.notice, .alert{
 		position: relative;
-		z-index: 2;
+		z-index: 3;
 		border: none !important;
 		padding: 0;
 	}
 	.information{
 		position: relative;
-		z-index: 2;
+		z-index: 3;
 		.logo{
 			position: relative;
 			width: 800px;
