--- a/app/views/coaches/_form.html.erb
+++ b/app/views/coaches/_form.html.erb
@@ -12,6 +12,13 @@
   <% end %>
 
   <div class="form-group">
+    <%= f.label :image, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.file_field :image, class: 'form-control' %>
+    </div>
+  </div>
+
+  <div class="form-group">
     <%= f.label :name, class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
       <%= f.text_field :name, class: 'form-control' %>
