--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,5 +1,5 @@
 <div class="welcome"></div>
-<div class="intro col-md-10 col-md-offset-1">Welcome to the MyProtocol by Protocol Nutrition. Please take a moment to set up your MyProtocol Profile below. This information will help us determine the best customized plan for you. To view all of Protocol Nutrition's products please visit <a href="http://protocolnutrition.com/">www.protocolnutrition.com</a>. <strong>Stick to Protocol!</strong></div>	
+<div class="intro col-md-10 col-md-offset-1">By taking our quick and easy Protocol Plan of Action quiz, you provide us with important information about who you are and what your goals are in order for us to understand your overall health and wellness in a snapshot.  Additionally, this information enables us to identify products and make specific recommendations based on your answers to help support you through your journey of health!</div>	
 <div class="new-profile container">
 	<div class="row">
 	  <div class="col-md-8 col-md-offset-2 form">
