--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -71,10 +71,10 @@
 				margin-left: 30%;
 				width: 66%;
 				margin-top: 20px;
-				color: #a90329;
-				border: 1px solid #a90329;
+				color: white;
+				border: 1px solid white;
 				text-transform: uppercase;
-				background: white;
+				background: transparent;
 				-webkit-transition: .2s;
 				-moz-transition: .2s;
 				-ms-transition: .2s;
@@ -108,6 +108,90 @@
 				}
 			}
 
+		}
+	}
+}
+#profiles{
+	position: relative;
+	z-index: 3;
+	h2{
+		font-size: 30px;
+		text-transform: uppercase;
+		font-weight: bold;
+		font-family: helvetica;
+		color: #a90329;
+		padding-bottom: 10px;
+		margin-bottom: 30px;
+		border-bottom: 1px solid #333333;
+	}
+	.profiler{
+		thead{
+			color: #666666;
+			th{
+				padding-top: 15px;
+				padding-bottom: 15px;
+			}
+		}
+		tbody{
+			color: rgba(255, 255, 255, 0.8);
+			border: 1px solid rgba(255,255,255, .2);
+			tr{
+				border-bottom: 1px solid rgba(255,255,255,.35);
+				font-size: 13px;
+				&:last-of-type{
+					border-bottom: none;
+				}
+				td{
+					padding-top: 25px;
+					padding-bottom: 25px;
+					padding-left: 15px;
+					border-top: none;
+					border-left: 1px solid rgba(255,255,255, .1);
+					&.buttons{
+						padding: 0;
+					a{
+						padding-top: 25px;
+						padding-bottom: 25px;
+						padding-left: 9px;
+						width: 100%;
+						color: #a90329;
+						opacity: .75;
+						display: inline-block;
+						-webkit-transition: .2s;
+						-moz-transition: .2s;
+						-ms-transition: .2s;
+						-o-transition: .2s;
+							&:hover{
+								background: #a90329;
+								color: white;
+								text-decoration: none;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+	.new{
+		width: 100%;
+		display: inline-block;
+		margin-top: 20px;
+		color: white;
+		border: 1px solid white;
+		text-transform: uppercase;
+		background: transparent;
+		padding: 10px;
+		border-radius: 10px;
+		text-align: center;
+		-webkit-transition: .2s;
+		-moz-transition: .2s;
+		-ms-transition: .2s;
+		-o-transition: .2s;
+		&:hover{
+			background: #a90329;
+			color: white;
+			border: 1px solid white;
+			text-decoration: none;
 		}
 	}
 }
