--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,6 +1,9 @@
-<div class="row">
-  <div class="col-md-offset-2 col-md-8">
-    <h1>Editing profile</h1>
-    <%= render 'form' %>
-  </div>
+
+<div class="new-profile container">
+	<div class="row">
+		<h2>Editing profile</h2>
+	  <div class="col-md-8 col-md-offset-2 form">
+	    <%= render 'form' %>
+	  </div>
+	</div>
 </div>
