--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,43 +1,44 @@
-<h1>Listing profiles</h1>
+<div id="profiles">
+  <h2>View all profiles</h2>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>email</th>
-      <th>gender</th>
-      <th>body_type</th>
-      <th>birthday</th>
-      <th>height</th>
-      <th>weight</th>
-      <th>waist</th>
-      <th>blood_type</th>
-      <th>veggies_per_day</th>
-      <th>zipcode</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @profiles.each do |profile| %>
+  <table class="table profiler">
+    <thead>
       <tr>
-        <td><%= profile.user.email %></td>
-        <td><%= profile.gender %></td>
-        <td><%= profile.body_type %></td>
-        <td><%= profile.birthday %></td>
-        <td><%= profile.height %></td>
-        <td><%= profile.weight %></td>
-        <td><%= profile.waist %></td>
-        <td><%= profile.blood_type %></td>
-        <td><%= profile.veggies_per_day %></td>
-        <td><%= profile.zipcode %></td>
-        <td><%= link_to 'Show', profile %></td>
-        <td><%= link_to 'Edit', edit_profile_path(profile) %></td>
-        <td><%= link_to 'Destroy', profile, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Email</th>
+        <th>Gender</th>
+        <th>Body Type</th>
+        <th>Birthday</th>
+        <th>Height</th>
+        <th>Weight</th>
+        <th>Waist</th>
+        <th>Blood Type</th>
+        <th>Veggies Per Day</th>
+        <th>Zipcode</th>
+        <th colspan="2"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @profiles.each do |profile| %>
+        <tr>
+          <td><%= profile.user.email %></td>
+          <td><%= profile.gender %></td>
+          <td><%= profile.body_type %></td>
+          <td><%= profile.birthday %></td>
+          <td><%= profile.height %></td>
+          <td><%= profile.weight %></td>
+          <td><%= profile.waist %></td>
+          <td><%= profile.blood_type %></td>
+          <td><%= profile.veggies_per_day %></td>
+          <td><%= profile.zipcode %></td>
+          <td class="buttons"><%= link_to 'Edit', edit_profile_path(profile) %></td>
+          <td class="buttons"><%= link_to 'Destroy', profile, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Profile', new_profile_path %>
+  <br>
+
+  <div class="col-md-12 no-pad"><%= link_to 'New Profile', new_profile_path, :class => "new" %></div>
+</div>
